--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,24 +1,54 @@
 <div class="orbit">
   <div class="planet about">
-    <%= icon('user') %>
+    <div class="content">
+      <%= icon('user') %>
+      <h2>Обо мне</h2>
+      <p>
+        Привет!
+      </p>
+    </div>
   </div>
   <div class="planet skills">
-    <%= icon('tasks') %>
+    <div class="content">
+      <%= icon('tasks') %>
+      <h2>Навыки</h2>
+      Привет!
+    </div>
   </div>
   <div class="planet science">
-    <%= icon('flask') %>
+    <div class="content">
+      <%= icon('flask') %>
+      <h2>Научные работы</h2>
+      Привет!
+    </div>
   </div>
   <div class="planet projects">
-    <%= icon('cogs') %>
+    <div class="content">
+      <%= icon('cogs') %>
+      <h2>Мои разработки</h2>
+      Привет!
+    </div>
   </div>
   <div class="planet works">
-    <%= icon('book') %>
+    <div class="content">
+      <%= icon('book') %>
+      <h2>Литературное творчество</h2>
+      Привет!
+    </div>
   </div>
   <div class="planet photos">
-    <%= icon('camera') %>
+    <div class="content">
+      <%= icon('camera') %>
+      <h2>Мои фото</h2>
+      Привет!
+    </div>
   </div>
   <div class="planet contacts">
-    <%= icon('envelope') %>
+    <div class="content">
+      <%= icon('envelope') %>
+      <h2>Контакты</h2>
+      Привет!
+    </div>
   </div>
 
 </div>
