Add locales support

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -2,9 +2,9 @@
   <div class="planet about">
     <div class="content">
       <%= icon('user') %>
-      <h2>Обо мне</h2>
+      <h2><%= t('.about') %></h2>
       <p>
-        Привет!
+        <%= t('.about_content.hello') %>
       </p>
     </div>
   </div>
