About me section done

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -7,6 +7,7 @@ body
   height: 100vh
   background-color: #000614
   z-index: 0
+  font-family: 'PT Sans', sans-serif
 
 [class^="star-"],
 [class^="noglow-star-"]
@@ -82,6 +83,7 @@ body
   .active-icon
     position: static
     display: inline
+    vertical-align: bottom
 
 .about
   background-color: #111933
@@ -122,6 +124,7 @@ h2
   padding: 0
   display: none
   color: white
+  font-family: 'Lora', serif
 
 .active-planet
   width: 800px
@@ -140,6 +143,14 @@ h2
   .orbit
     width: 300px
     height: 150px
+
+.interests
+  display: flex
+  justify-content: space-around
+  flex-direction: row
+  flex-wrap: wrap
+  margin-bottom: 15px
+  z-index: 5
 
 //
 // @media screen and (max-width: 1366)
