--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -89,7 +89,7 @@ body
   background-color: #111933
 
 .science
-  background-color: #47B2D6
+  background-color: #00B5A9
   top: 0%
 
 .skills
@@ -104,17 +104,17 @@ body
 
 .works
   top: 100%
-  background-color: #3BFF3E
+  background-color: #009903
 
 .photos
   top: 85%
   left: 15%
-  background-color: #FFDC17
+  background-color: #ED9200
 
 .contacts
   top: 15%
   left: 15%
-  background-color: #D60400
+  background-color: #7A0000
 
 .content
   display: none
@@ -151,6 +151,20 @@ h2
   flex-wrap: wrap
   margin-bottom: 15px
   z-index: 5
+
+.skills-list
+  display: flex
+  justify-content: space-around
+
+  img
+    background-color: white
+
+  figcaption
+    text-align: center
+
+progress
+  display: block
+  width: inherit
 
 //
 // @media screen and (max-width: 1366)
