--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -132,9 +132,30 @@
     <div class="content">
       <%= icon('cogs') %>
       <h2><%= t('.projects') %></h2>
-      <p>
-        <%= t('.projects_content.hello') %>
-      </p>
+        <div class="project">
+          <h3>Ord</h3>
+          <p>
+            <%= t('.projects_content.ord_desc') %>
+          </p>
+        </div>
+        <div class="project">
+          <h3>Interskillar</h3>
+          <p>
+            <%= t('.projects_content.is_desc') %>
+          </p>
+        </div>
+        <div class="project">
+          <h3>Buy and Keep</h3>
+          <p>
+            <%= t('.projects_content.bk_desc') %>
+          </p>
+        </div>
+        <div class="project">
+          <h3>Achievaroom</h3>
+          <p>
+            <%= t('.projects_content.ar_desc') %>
+          </p>
+        </div>
     </div>
   </div>
 
