Add works page content

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -165,3 +165,19 @@ h2
 progress
   display: block
   width: inherit
+
+.collections
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-around
+
+  h3
+    vertical-align: middle
+
+.collection
+  height: 150px
+  min-width: 45%
+  max-width: 45%
+  text-align: center
+  background-color: grey
+  margin-bottom: 10px
