--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -126,8 +126,6 @@
     </div>
   </div>
 
-
-
   <div class="planet projects">
     <div class="content">
       <%= icon('cogs') %>
@@ -164,10 +162,24 @@
       <%= icon('book') %>
       <h2><%= t('.works') %></h2>
       <p>
-        <%= t('.about_content.hello') %>
+        <%= t('.works_content.my_way') %>
+        <a href="http://www.proza.ru/avtor/derrsaff">Проза.ру</a>,
+        <a href="https://ficbook.net/home/myfics">Книга Фанфиков</a>
       </p>
+      <div class="collections">
+        <div class="collection">
+          <h3><%= t('.works_content.collections.petals_of_bitterness') %></h3>
+        </div>
+        <div class="collection">
+          <h3><%= t('.works_content.collections.coterie_of_drawing') %></h3>
+        </div>
+        <div class="collection">
+          <h3><%= t('.works_content.collections.web_of_strings') %></h3>
+        </div>
+      </div>
     </div>
   </div>
+
   <div class="planet photos">
     <div class="content">
       <%= icon('camera') %>
@@ -177,6 +189,7 @@
       </p>
     </div>
   </div>
+
   <div class="planet contacts">
     <div class="content">
       <%= icon('envelope') %>
