--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -181,3 +181,58 @@ progress
   text-align: center
   background-color: grey
   margin-bottom: 10px
+
+.gallery
+  display: flex
+  align-items: center
+  justify-content: center
+
+.myphoto
+  max-height: 450px
+  max-width: 800px
+  display: none
+
+.previous
+  margin-right: 15px
+  width: 50px
+  height: 350px
+  background-color: grey
+  opacity: 0.3
+  display: flex
+  align-items: center
+  justify-content: center
+
+.previous:hover
+  opacity: 0.6
+
+.previous::before
+  content: ""
+  height: 20px
+  width: 20px
+  border-left: 3px solid black
+  border-top: 3px solid black
+  transform: rotate(-45deg) translateX(10px)
+
+.next
+  margin-left: 15px
+  width: 50px
+  height: 350px
+  background-color: grey
+  opacity: 0.3
+  display: flex
+  align-items: center
+  justify-content: center
+
+.next:hover
+  opacity: 0.6
+
+.next::before
+  content: ""
+  height: 20px
+  width: 20px
+  border-top: 3px solid black
+  border-right: 3px solid black
+  transform: rotate(45deg)  translateX(-10px)
+
+.currentPhoto
+  display: flex
