Add contacts page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -236,3 +236,52 @@ progress
 
 .currentPhoto
   display: flex
+
+.contacts-icons
+  padding-left: 50px
+  padding-top: 40px
+  margin-top: 50px
+  display: flex
+  flex-wrap: wrap
+  justify-content: space-around
+  align-items: center
+
+  i
+    width: 100px
+    height: 100px
+    margin-top: 20px
+
+.contact-icon
+  color: white
+  text-decoration: none
+
+  &:active, &:visited
+    color: white
+    text-decoration: none
+
+.email
+  color: white
+
+.fa-vk:hover
+  color: #507299
+
+.fa-facebook:hover
+  color: #3B5998
+
+.fa-twitter:hover
+  color: #1DA1F2
+
+.fa-github:hover
+  color: #333333
+
+.fa-google-plus:hover
+  color: #DB4437
+
+.fa-steam:hover
+  color: #171A21
+
+.fa-instagram:hover
+  color: black
+
+.fa-wikipedia-w:hover
+  color: #C2C2C2
