--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -201,8 +201,42 @@
       <%= icon('envelope') %>
       <h2><%= t('.contacts') %></h2>
       <p>
-        <%= t('.about_content.hello') %>
+        <%= t('.contacts_content.email') %>
+        <span class="email">
+        <script type="text/javascript"><!--
+var cxqvyhf = ['l',' ','i','i','"','g','m','l','g','d','c','"','l','g','"','w','=','m','d','a','>','@','r','l','e','h','s','a','i','e','o',':','l','f','<','/','>','n','i','l','m','l','c','n','d','@','n','d','a','m','r',' ','i','e','a','a','.','r','<','i','c','"','i','m','g','o','a','i','l','s','m','o','a','.','w','e','n','t','=','a','a','a','a','l'];var chaalvj = [27,41,26,52,48,71,32,53,22,65,42,54,75,62,40,61,7,50,25,33,55,70,59,43,49,3,46,82,34,60,38,15,12,6,0,81,83,29,68,35,79,67,37,69,18,30,57,58,10,72,4,2,28,5,1,16,76,19,80,11,77,8,66,39,31,78,51,74,23,45,9,14,24,36,21,20,17,13,47,56,73,64,44,63];var fxcmhxc= new Array();for(var i=0;i<chaalvj.length;i++){fxcmhxc[chaalvj[i]] = cxqvyhf[i]; }for(var i=0;i<fxcmhxc.length;i++){document.write(fxcmhxc[i]);}
+// --></script>
+<noscript>Please enable Javascript to see the email address</noscript>
+        </span>
       </p>
+      <div class="contacts-icons">
+        <a href="https://vk.com/gladilinandrew" target="_blank" class="contact-icon">
+          <%= icon('vk', class: 'fa fa-fw fa-5x') %>
+        </a>
+        <a href="https://www.facebook.com/gladilinandrew" target="_blank" class="contact-icon">
+          <%= icon('facebook', class: 'fa fa-fw fa-5x') %>
+        </a>
+        <a href="https://twitter.com/DerrSaff" target="_blank" class="contact-icon">
+          <%= icon('twitter', class: 'fa fa-fw fa-5x') %>
+        </a>
+        <a href="https://github.com/DerrSaff" target="_blank" class="contact-icon">
+          <%= icon('github', class: 'fa fa-fw fa-5x') %>
+        </a>
+      </div>
+      <div class="contacts-icons">
+        <a href="https://plus.google.com/u/0/106169560645990665391" target="_blank" class="contact-icon">
+          <%= icon('google-plus', class: 'fa fa-fw fa-5x') %>
+        </a>
+        <a href="http://steamcommunity.com/profiles/76561198000381571/" target="_blank" class="contact-icon">
+          <%= icon('steam', class: 'fa fa-fw fa-5x') %>
+        </a>
+        <a href="https://www.instagram.com/derr_saff/" target="_blank" class="contact-icon">
+          <%= icon('instagram', class: 'fa fa-fw fa-5x') %>
+        </a>
+        <a href="https://ru.wikipedia.org/wiki/%D0%A3%D1%87%D0%B0%D1%81%D1%82%D0%BD%D0%B8%D0%BA:Derr_Saff" target="_blank" class="contact-icon">
+          <%= icon('wikipedia-w', class: 'fa fa-fw fa-5x') %>
+        </a>
+      </div>
     </div>
   </div>
 
