--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -16,22 +16,58 @@
         <%= t('.about_content.interests') %>
       </p>
       <div class="interests">
+        <span class="tip">
           <%= image_tag("interests/it.png", alt: t('.about_content.interests_list.it'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.it') %></span>
+        </span>
+        <span class="tip">
           <%= image_tag("interests/sciences.png", alt: t('.about_content.interests_list.sciences'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.sciences') %></span>
+        </span>
+        <span class="tip">
           <%= image_tag("interests/foreign_languages.png", alt: t('.about_content.interests_list.foreign_languages'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.foreign_languages') %></span>
+        </span>
+        <span class="tip">
           <%= image_tag("interests/literature.png", alt: t('.about_content.interests_list.literature'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.literature') %></span>
+        </span>
       </div>
       <div class="interests">
+        <span class="tip">
           <%= image_tag("interests/yoga.png", alt: t('.about_content.interests_list.yoga'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.yoga') %></span>
+        </span>
+        <span class="tip">
           <%= image_tag("interests/sports.png", alt: t('.about_content.interests_list.sports'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.sports') %></span>
+        </span>
+        <span class="tip">
           <%= image_tag("interests/games.png", alt: t('.about_content.interests_list.games'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.games') %></span>
+        </span>
+        <span class="tip">
           <%= image_tag("interests/socionics.png", alt: t('.about_content.interests_list.socionics'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.socionics') %></span>
+        </span>
       </div>
       <div class="interests">
+        <span class="tip">
           <%= image_tag("interests/ai.png", alt: t('.about_content.interests_list.ai'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.ai') %></span>
+        </span>
+        <span class="tip">
           <%= image_tag("interests/music.png", alt: t('.about_content.interests_list.music'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.music') %></span>
+        </span>
+        <span class="tip">
           <%= image_tag("interests/engineering.png", alt: t('.about_content.interests_list.engineering'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.engineering') %></span>
+        </span>
+        <span class="tip">
           <%= image_tag("interests/comics.png", alt: t('.about_content.interests_list.comics'), class: 'interest') %>
+          <span class="tip-content"><%= t('.about_content.interests_list.comics') %></span>
+        </span>
       </div>
     </div>
   </div>
@@ -45,11 +81,11 @@
       </p>
       <p>
         <%= t('.science_content.thesis') %>
-        <a href="https://github.com/DerrSaff/mythesis">https://github.com/DerrSaff/mythesis</a>
+        <a href="https://github.com/DerrSaff/mythesis" target="_blank">https://github.com/DerrSaff/mythesis</a>
       </p>
       <p>
         <%= t('.science_content.articles') %>
-        <a href="https://github.com/DerrSaff/mythesis">https://github.com/DerrSaff/myarticles</a>
+        <a href="https://github.com/DerrSaff/mythesis" target="_blank">https://github.com/DerrSaff/myarticles</a>
       </p>
     </div>
   </div>
