Rewritten background to canvas

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,3 +1,5 @@
+<canvas id='space' style='position:absolute; left:0px; top:0px;'></canvas>
+
 <div class="orbit">
   <div class="planet about">
     <div class="content">
@@ -199,8 +201,8 @@
       <h2><%= t('.works') %></h2>
       <p>
         <%= t('.works_content.my_way') %>
-        <a href="http://www.proza.ru/avtor/derrsaff">Проза.ру</a>,
-        <a href="https://ficbook.net/home/myfics">Книга Фанфиков</a>
+        <a href="http://www.proza.ru/avtor/derrsaff" target="_blank">Проза.ру</a>,
+        <a href="https://ficbook.net/home/myfics" target="_blank">Книга Фанфиков</a>
       </p>
       <div class="collections">
         <div class="collection">
