--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -2,6 +2,9 @@
 
 <div class="orbit">
   <div class="planet about">
+    <div class="tip">
+      <%= raw(t('.about')) %>
+    </div>
     <div class="content">
       <h2><%= t('.about') %></h2>
       <p>
@@ -74,6 +77,9 @@
   </div>
 
   <div class="planet science">
+    <div class="tip">
+      <%= t('.science') %>
+    </div>
     <div class="content">
       <h2><%= t('.science') %></h2>
       <p>
@@ -91,6 +97,9 @@
   </div>
 
   <div class="planet skills">
+    <div class="tip">
+      <%= t('.skills') %>
+    </div>
     <div class="content">
       <h2><%= t('.skills') %></h2>
       <p>
@@ -162,6 +171,9 @@
   </div>
 
   <div class="planet projects">
+    <div class="tip">
+      <%= t('.projects') %>
+    </div>
     <div class="content">
       <h2><%= t('.projects') %></h2>
         <div class="project">
@@ -192,6 +204,9 @@
   </div>
 
   <div class="planet works">
+    <div class="tip">
+      <%= t('.works') %>
+    </div>
     <div class="content">
       <h2><%= t('.works') %></h2>
       <p>
@@ -214,6 +229,9 @@
   </div>
 
   <div class="planet photos">
+    <div class="tip">
+      <%= t('.photos') %>
+    </div>
     <div class="content">
       <h2><%= t('.photos') %></h2>
       <div class="gallery">
@@ -229,14 +247,18 @@
   </div>
 
   <div class="planet contacts">
+    <div class="tip">
+      <%= t('.contacts') %>
+    </div>
     <div class="content">
       <h2><%= t('.contacts') %></h2>
       <p>
         <%= t('.contacts_content.email') %>
         <span class="email">
-        <script type="text/javascript"><!--
-var cxqvyhf = ['l',' ','i','i','"','g','m','l','g','d','c','"','l','g','"','w','=','m','d','a','>','@','r','l','e','h','s','a','i','e','o',':','l','f','<','/','>','n','i','l','m','l','c','n','d','@','n','d','a','m','r',' ','i','e','a','a','.','r','<','i','c','"','i','m','g','o','a','i','l','s','m','o','a','.','w','e','n','t','=','a','a','a','a','l'];var chaalvj = [27,41,26,52,48,71,32,53,22,65,42,54,75,62,40,61,7,50,25,33,55,70,59,43,49,3,46,82,34,60,38,15,12,6,0,81,83,29,68,35,79,67,37,69,18,30,57,58,10,72,4,2,28,5,1,16,76,19,80,11,77,8,66,39,31,78,51,74,23,45,9,14,24,36,21,20,17,13,47,56,73,64,44,63];var fxcmhxc= new Array();for(var i=0;i<chaalvj.length;i++){fxcmhxc[chaalvj[i]] = cxqvyhf[i]; }for(var i=0;i<fxcmhxc.length;i++){document.write(fxcmhxc[i]);}
-// --></script>
+          <script type="text/javascript"><!--
+
+          var cxqvyhf = ['l',' ','i','i','"','g','m','l','g','d','c','"','l','g','"','w','=','m','d','a','>','@','r','l','e','h','s','a','i','e','o',':','l','f','<','/','>','n','i','l','m','l','c','n','d','@','n','d','a','m','r',' ','i','e','a','a','.','r','<','i','c','"','i','m','g','o','a','i','l','s','m','o','a','.','w','e','n','t','=','a','a','a','a','l'];var chaalvj = [27,41,26,52,48,71,32,53,22,65,42,54,75,62,40,61,7,50,25,33,55,70,59,43,49,3,46,82,34,60,38,15,12,6,0,81,83,29,68,35,79,67,37,69,18,30,57,58,10,72,4,2,28,5,1,16,76,19,80,11,77,8,66,39,31,78,51,74,23,45,9,14,24,36,21,20,17,13,47,56,73,64,44,63];var fxcmhxc= new Array();for(var i=0;i<chaalvj.length;i++){fxcmhxc[chaalvj[i]] = cxqvyhf[i]; }for(var i=0;i<fxcmhxc.length;i++){document.write(fxcmhxc[i]);}
+          // --></script>
 <noscript>Please enable Javascript to see the email address</noscript>
         </span>
       </p>
