Minor fix for contacts icons

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -297,9 +297,9 @@ progress
   align-items: center
 
   i
+    position: relative
     width: 100px
     height: 100px
-    margin-top: 20px
 
 .contact-icon
   text-decoration: none
