CSS and JS fixes for achievements page

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -17,9 +17,10 @@ body
   padding: 0
   height: 100vh
   background-color: #000614
+  background-repeat: no-repeat
+  background-attachment: fixed
   z-index: 0
   font-family: 'PT Sans', sans-serif
-
 
 [class^="star-"],
 [class^="noglow-star-"]
@@ -354,6 +355,7 @@ progress
 
 // Achievements page
 .achievements
+  padding: 10px
   display: flex
   justify-content: space-around
   flex-wrap: wrap
@@ -362,6 +364,7 @@ progress
     width: 141px
     height: 200px
     margin: 10px
+    cursor: pointer
 
   img.landscape
     width: 200px
