Add content to science page

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -92,7 +92,11 @@
       </p>
       <p>
         <%= t('.science_content.articles') %>
-        <a href="https://github.com/DerrSaff/mythesis" target="_blank">https://github.com/DerrSaff/myarticles</a>
+        <a href="https://github.com/DerrSaff/myarticles" target="_blank">https://github.com/DerrSaff/myarticles</a>
+      </p>
+      <p>
+        <%= t('.science_content.achievements_desc') %>
+        <a href="/achievements" target="_blank"><%= t('.science_content.achievements_title') %></a>
       </p>
     </div>
   </div>
