Add refresh icon

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -61,6 +61,13 @@ body
   to
     box-shadow: 0 0 4px 2px white
 
+.refresh-icon
+  position: absolute
+  left: 30px
+  top: 30px
+  color: white
+  cursor: pointer
+
 .orbit
   width: 400px
   height: 200px
