--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -1,5 +1,7 @@
 <canvas id='space' style='position:absolute; left:0px; top:0px;'></canvas>
 
+<%= icon('refresh', class: 'refresh-icon') %>
+
 <div class="orbit">
   <div class="planet about hoverable">
     <div class="planet-tip">
