--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -95,6 +95,38 @@ body
   transition-duration: 1s
   color: white
 
+  .about
+    background-color: #111933
+
+  .science
+    background-color: #00B5A9
+    top: 0%
+    animation: myOrbit 1s linear infinite
+
+  .skills
+    top: 15%
+    left: 85%
+    background-color: #2B05B3
+
+  .projects
+    top: 85%
+    left: 85%
+    background-color: #631262
+
+  .works
+    top: 100%
+    background-color: #009903
+
+  .photos
+    top: 85%
+    left: 15%
+    background-color: #ED9200
+
+  .contacts
+    top: 15%
+    left: 15%
+    background-color: #7A0000
+
 .planet-tip
   display: none
 
@@ -117,37 +149,7 @@ body
   border-top: 1px solid white
   transform: skewX(-45deg)
 
-.about
-  background-color: #111933
 
-.science
-  background-color: #00B5A9
-  top: 0%
-  animation: myOrbit 1s linear infinite
-
-.skills
-  top: 15%
-  left: 85%
-  background-color: #2B05B3
-
-.projects
-  top: 85%
-  left: 85%
-  background-color: #631262
-
-.works
-  top: 100%
-  background-color: #009903
-
-.photos
-  top: 85%
-  left: 15%
-  background-color: #ED9200
-
-.contacts
-  top: 15%
-  left: 15%
-  background-color: #7A0000
 
 .content
   display: none
@@ -380,3 +382,37 @@ progress
   .achievement.landscape
     width: 200px
     height: 141px
+
+ul.navigation
+  margin: 0
+  padding: 0
+  list-style: none
+  color: white
+  display: flex
+  text-align: center
+  height: 80px
+
+  li
+    cursor: pointer
+    width: 15%
+    margin-left: auto
+    margin-right: auto
+    line-height: 80px
+
+    .science
+      background-color: #00B5A9
+
+    .skills
+      background-color: #2B05B3
+
+    .projects
+      background-color: #631262
+
+    .literature
+      background-color: #009903
+
+    .photos
+      background-color: #ED9200
+
+    .contacts
+      background-color: #7A0000
