--- a/app/views/application/index.html.slim
+++ b/app/views/application/index.html.slim
@@ -1,17 +1,32 @@
 header
   nav
     ul.navigation.fa-ul
-      li.science
-        = icon('flask', class: "fa-2x")
-      li.literature
+      li#science
+        <svg fill="#FFFFFF" height="48" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0z" fill="none"/><path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z"/></svg>
+      li#literature
         = icon('file-text', class: "fa-2x")
-      li.skills
+      li#skills
         = icon('tasks', class: "fa-2x")
-      li.about
+      li#about
         = icon('user-circle', class: "fa-3x")
-      li.projects
+      li#projects
         = icon('cogs', class: "fa-2x")
-      li.photos
+      li#photos
         = icon('picture-o', class: "fa-2x")
-      li.contacts
+      li#contacts
         = icon('envelope', class: "fa-2x")
+main
+  .science
+    h2
+      = t('.science')
+    p
+      = t('.science_content.theme')
+      = t('.science_content.thesis')
+      a href="https://github.com/DerrSaff/mythesis" target="_blank">https://github.com/DerrSaff/mythesis
+    p
+      = t('.science_content.articles')
+      a href="https://github.com/DerrSaff/myarticles" target="_blank">https://github.com/DerrSaff/myarticles
+    p
+      = t('.science_content.achievements_desc')
+      a href="/achievements" target="_blank"
+        = t('.science_content.achievements_title')
